Botão automatico, entende em qual estado a lampada está e com os clicks muda conforme e necessidade do usuario

--- a/lampada/index.html
+++ b/lampada/index.html
@@ -16,8 +16,7 @@
             <img src="img/desligada.jpg" alt="Lampada Desligada" id="lamp">
         </div>
         <div class="botoes">
-            <button id="ligar">Ligar</button>
-            <button id="desligar">desligar</button>
+            <button id="ligadesliga">Ligar</button>
         </div>
     </main>
     <script src="index.js"></script>
